--- a/index.html
+++ b/index.html
@@ -45,18 +45,18 @@
                                 <i class="fa-solid fa-star"></i>
                             </p>
                         </div>
-                        <a class="text-decoration-underline text-white" title="Company name Reviews" target="_blank"
+                        <a class="text-decoration-underline text-white" title="LFTGU Lawn care Reviews" target="_blank"
                             href="">
                             (12 Rating &
                             Reviews)</a>
                     </div>
 
                     <div class="d-flex align-items-center gap-2">
-                        <a title="Company name Lawn Care Facebook Profile"
+                        <a title="LFTGU Lawn care Lawn Care Facebook Profile"
                             href="https://www.facebook.com/landscapingfromthegroundupLLC/photos_by">
                             <i class="fa-brands fa-facebook fs-26 text-white"></i>
                         </a>
-                        <a title="Company name Lawn Care Gmail" href="mailto:ftgu.landscape.lakeland@gmail.com">
+                        <a title="LFTGU Lawn care Lawn Care Gmail" href="mailto:ftgu.landscape.lakeland@gmail.com">
                             <i class="fa-solid fa-envelope fs-26 text-white mx-2"></i>
                         </a>
                     </div>
@@ -73,7 +73,7 @@
                             <span>
                                 Lakeland, FL <br>
 
-                                <a title="Company name Location" class="text-decoration-underline fw-400 fs-18"
+                                <a title="LFTGU Lawn care Location" class="text-decoration-underline fw-400 fs-18"
                                     target="_blank"
                                     href="https://www.google.com/maps/place/5740+South+Gordon+Rd+SW,+Austell,+GA+30168,+USA/@33.8145237,-84.6052862,17z/data=!3m1!4b1!4m6!3m5!1s0x88f5187e4579caa5:0xe23bdb12c47ec1e!8m2!3d33.8145237!4d-84.6027113!16s%2Fg%2F11c25fkh7k?entry=ttu">Get
                                     Directions
@@ -82,8 +82,8 @@
                         </p>
                     </div>
                     <div class="d-xl-block d-none">
-                        <a title="Company name" href="/index.html"><img class="logo" src="/img/logo.png"
-                                alt="Company name Logo"></a>
+                        <a title="LFTGU Lawn care" href="/index.html"><img class="logo" src="/img/logo.png"
+                                alt="LFTGU Lawn care Logo"></a>
                     </div>
                     <div class="text-md-end">
                         <a class="phone fw-500 gap-2" title="phone number" href="tel:+14049748399">
@@ -100,8 +100,8 @@
             <div class="container">
                 <!-- Logo Section (visible on extra large screens) -->
                 <div class="logo-section d-xl-none d-inline">
-                    <a title="Company name Homepage Navigation" href="/index.html"><img class="logo" src="/img/logo.png"
-                            alt="Company name"></a>
+                    <a title="LFTGU Lawn care Homepage Navigation" href="/index.html"><img class="logo" src="/img/logo.png"
+                            alt="LFTGU Lawn care"></a>
                 </div>
                 <!-- Navbar Toggler for mobile -->
                 <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
@@ -115,8 +115,8 @@
                     <div class="offcanvas-header bg-light">
                         <!-- Logo Section (visible on extra large screens, within offcanvas) -->
                         <div class="logo-section mb-0 d-xl-none d-inline">
-                            <a title="Company name" href="/index.html"><img class="logo" src="/img/logo.png"
-                                    alt="Company name Canvas Logo"></a>
+                            <a title="LFTGU Lawn care" href="/index.html"><img class="logo" src="/img/logo.png"
+                                    alt="LFTGU Lawn care Canvas Logo"></a>
                         </div>
 
                         <!-- Close Button for offcanvas -->
@@ -130,7 +130,7 @@
                         <ul class="navbar-nav w-100 mb-2 mb-lg-0">
                             <!-- First Navigation -->
                             <li class="nav-item">
-                                <a class="nav-link" title="Company name Homepage" href="/index.html">Home</a>
+                                <a class="nav-link" title="LFTGU Lawn care Homepage" href="/index.html">Home</a>
                             </li>
                             <!-- Second Navigation -->
                             <li class="nav-item">
@@ -166,7 +166,7 @@
                             </li>
 
                             <!-- Call Now Button (visible on extra large screens, within offcanvas) -->
-                            <a title="Call Company name Now"
+                            <a title="Call LFTGU Lawn care Now"
                                 class="btn btn-primary d-xl-none d-flex justify-content-center col-12 mt-4 fs-17 text-uppercase py-3"
                                 href="tel:+14049748399">
                                 Call Now
@@ -228,9 +228,9 @@
     <div class="position-relative ratings-div mb-4" data-aos="fade-up">
         <div class="ratings-grid mt-5 container">
             <!-- Facebook Rating -->
-            <a class="ratings-card" title="Company name Facebook Navigation" target="_blank"
+            <a class="ratings-card" title="LFTGU Lawn care Facebook Navigation" target="_blank"
                 href="https://www.facebook.com/landscapingfromthegroundupLLC/photos_by">
-                <img src="/img/facebook.png" alt="Company name facebook logo">
+                <img src="/img/facebook.png" alt="LFTGU Lawn care facebook logo">
                 <p class="text-center ratings">
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
@@ -240,8 +240,8 @@
                 </p>
             </a>
             <!-- Google Rating -->
-            <a class="ratings-card" title="Company name Google Navigation" target="_blank" href="">
-                <img src="/img/google.png" alt="Company name google logo">
+            <a class="ratings-card" title="LFTGU Lawn care Google Navigation" target="_blank" href="">
+                <img src="/img/google.png" alt="LFTGU Lawn care google logo">
                 <p class="text-center ratings">
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
@@ -251,8 +251,8 @@
                 </p>
             </a>
             <!-- Yelp Rating -->
-            <a class="ratings-card" title="Company name Yelp Navigation" href="">
-                <img src="/img/yelp.png" alt="Company name Yelp Logo">
+            <a class="ratings-card" title="LFTGU Lawn care Yelp Navigation" href="">
+                <img src="/img/yelp.png" alt="LFTGU Lawn care Yelp Logo">
                 <p class="text-center ratings">
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
@@ -287,10 +287,10 @@
                         installation, and junk removal. Our team works hard to keep your lawn healthy and looking its
                         best, so you can relax and enjoy your outdoor space. Trust us for great service and results
                         you'll love. Give us a call at <br><a href="tel:+14049748399" class="text-decoration-underline"
-                            title="Company name Contact Info">+1 813-809-3317</a> to see how we can help your lawn
+                            title="LFTGU Lawn care Contact Info">+1 813-809-3317</a> to see how we can help your lawn
                         thrive!
                     </p>
-                    <a title="Call Company name Now" class="btn btn-primary rounded-1 px-5 fs-20 fw-600"
+                    <a title="Call LFTGU Lawn care Now" class="btn btn-primary rounded-1 px-5 fs-20 fw-600"
                         href="tel:+14049748399">
                         Call Now
                     </a>
@@ -492,7 +492,7 @@
 
     <!-- CTA Section -->
     <section class="cta primary-overlay">
-        <img class="bg-img" style="object-position: center;" src="/img/gardener-mowing.png" alt="Company name">
+        <img class="bg-img" style="object-position: center;" src="/img/gardener-mowing.png" alt="LFTGU Lawn care">
         <div class="container" data-aos="fade-up">
             <!-- CTA Text -->
             <h4 class="text-center lh-100 text-capitalize">Your Perfect Lawn Is A Call Away. <br>
@@ -500,7 +500,7 @@
             </h4>
             <!-- CTA Button -->
             <div class="d-flex justify-content-center">
-                <a title="Call Company name for free estimate" class="btn btn-primary rounded-1 px-5 fs-18 mt-5"
+                <a title="Call LFTGU Lawn care for free estimate" class="btn btn-primary rounded-1 px-5 fs-18 mt-5"
                     href="tel:+14049748399">Call Now</a>
             </div>
         </div>
@@ -518,7 +518,7 @@
                     </h2>
                     <p class="mb-4">
 
-                        For homeowners in Lakeland, FL Company name offers trusted residential lawn services
+                        For homeowners in Lakeland, FL LFTGU Lawn care offers trusted residential lawn services
                         to ensure your outdoor space remains beautiful and well-maintained. With a focus on quality and
                         customer satisfaction, we're committed to transforming your yard into a lush oasis you can be
                         proud of.
@@ -545,8 +545,8 @@
 
                 <!-- Img Side -->
                 <div class="img-div bottom-right">
-                    <img style="object-position: center;" src="/img/residential-lawn.jpg"
-                        alt="Company name Residential Lawn Service">
+                    <img style="object-position: center;" src="/img/car-house-lawn.jpg"
+                        alt="LFTGU Lawn care Residential Lawn Service">
                 </div>
             </div>
         </div>
@@ -555,7 +555,7 @@
     <!-- Service Areas -->
     <section class="service-areas position-relative py-5 primary-overlay" id="service-areas">
         <img style="object-position: bottom;" class="bg-img" src="/img/checking-garden.png"
-            alt="Company name Service Areas">
+            alt="LFTGU Lawn care Service Areas">
         <div class="container" data-aos="fade-up">
             <div class="">
                 <h3 class="header text-center text-white">
@@ -632,14 +632,14 @@
                 <p class="sub-header">What some of our happy customers are saying...</p>
                 <h3 class="header">Clients Testimonials</h3>
                 <p>
-                    See what our satisfied customers have to say about their experiences at Company name Lawn Care. From
+                    See what our satisfied customers have to say about their experiences at LFTGU Lawn care Lawn Care. From
                     professionalism to affordable prices, our clients share their stories:
                 </p>
                 <div class="d-flex gap-2 flex-wrap mt-4">
-                    <a title="Company name Phone Number" class="btn btn-primary rounded-1 px-5 fs-20 fw-600"
+                    <a title="LFTGU Lawn care Phone Number" class="btn btn-primary rounded-1 px-5 fs-20 fw-600"
                         href="tel:+14049748399">
                         Call Now </a>
-                    <a title="Company name Reviews" class="btn btn-outline-primary rounded-1 px-5 fs-20 fw-600"
+                    <a title="LFTGU Lawn care Reviews" class="btn btn-outline-primary rounded-1 px-5 fs-20 fw-600"
                         href="">
                         Read All Reviews
                     </a>
@@ -826,7 +826,7 @@
                             Lakeland, FL <br>
                             Lakeland, FL 30168
                             <br>
-                            <a class="text-decoration-underline text-secondary" title="Company name Directions"
+                            <a class="text-decoration-underline text-secondary" title="LFTGU Lawn care Directions"
                                 target="_blank"
                                 href="https://www.google.com/maps/place/5740+South+Gordon+Rd+SW,+Austell,+GA+30168,+USA/@33.8145237,-84.6052862,17z/data=!3m1!4b1!4m6!3m5!1s0x88f5187e4579caa5:0xe23bdb12c47ec1e!8m2!3d33.8145237!4d-84.6027113!16s%2Fg%2F11c25fkh7k?entry=ttu">
                                 Get Directions
@@ -870,7 +870,7 @@
                     <div class="footer-nav">
                         <!-- Phone Number -->
                         <p>
-                            Main: <a class="text-white" title="Main Company name Phone Number" href="tel:+14049748399">
+                            Main: <a class="text-white" title="Main LFTGU Lawn care Phone Number" href="tel:+14049748399">
                                 +1 813-809-3317</a>
                         </p>
 
@@ -880,7 +880,7 @@
             <hr class="mt-4" />
 
             <p class="pt-2 pb-3 fw-500 text-white text-center border-1 border-top border-white pt-5">&copy;
-                Company name 2024. All rights reserved.</p>
+                LFTGU Lawn care 2024. All rights reserved.</p>
             <p class="pt-2 pb-3 fw-500 text-white text-center">The content available on this website is owned by us
                 and
                 our licensors. Copying any content, including images, without our consent is prohibited.</p>
