--- a/index.html
+++ b/index.html
@@ -283,10 +283,10 @@
                         make homeowners proud.
                         <br><br>
                         At Lakeland, FL, we know that a great lawn is essential for a happy home. That's why
-                        we offer a range of services, like lawn mowing, tree trimming, mulching, pine straw
-                        installation, and junk removal. Our team works hard to keep your lawn healthy and looking its
+                        we offer a range of services, like lawn mowing, tree trimming, mulching, edge & blow hard
+                        surface, sidewalks, prep bed areas , trimming & shaping . Our team works hard to keep your lawn healthy and looking its
                         best, so you can relax and enjoy your outdoor space. Trust us for great service and results
-                        you'll love. Give us a call at <br><a href="tel:+14049748399" class="text-decoration-underline"
+                        you'll love. Give us a call at <br> <br><a href="tel:+14049748399" class="text-decoration-underline"
                             title="LFTGU Lawn care Contact Info">+1 813-809-3317</a> to see how we can help your lawn
                         thrive!
                     </p>
@@ -527,7 +527,7 @@
                         to quality, we ensure your yard looks neat and well-maintained. Trust LFTGU Lawn Care to enhance
                         your outdoor space with our professional shrub trimming services.
 
-ss
+                        ss
                     </p>
                     <div class="d-flex gap-2 flex-wrap">
                         <a title="Call Now" class="btn btn-primary rounded-1 px-5 fs-20 fw-600" href="tel:+14049748399">
