--- a/contact-us.html
+++ b/contact-us.html
@@ -6,12 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1 maximum-scale=1.0, user-scalable=no">
     <title>
-        Contact Us | LFTGU Lawn care Lawn Care | Lakeland, FL
+       Contact us | Trusted Lawn Care  Services in Lakeland, FL
     </title>
 
-    <meta name="description"
-        content="Get in touch with Lakeland, FL for expert lawn care and landscaping services in Lakeland, FL, and nearby areas.">
-    <meta name="keywords" content="contact us, lawn care services, landscaping, Lakeland, FL, professional services">
+    <meta name="description" content="">
+    <meta name="keywords" content="">
 
     <meta name="format-detection" content="telephone=no">
 
@@ -30,15 +29,15 @@
 
 <body>
     <!-- Navbar and Hero Section -->
-    <section class="nav-hero inner-page position-relative" style="overflow: visible !important; overflow-x: hidden;">
+    <section class="nav-hero position-relative" style="overflow: visible !important; overflow-x: hidden;">
         <div class="first-nav bg-primary py-1">
             <div class="container">
                 <div
                     class="d-flex flex-wrap justify-content-md-between justify-content-center gap-md-0 gap-3 align-items-center">
                     <div class="d-flex flex-wrap justify-content-center align-items-center gap-2">
                         <div class="d-flex justify-content-center align-items-center gap-2">
-                            <p class="fs-24 fw-600 text-secondary">5.0</p>
-                            <p class="text-center ratings pb-1 fs-22 text-secondary">
+                            <p class="fs-24 fw-600 text-secondary-2">5.0</p>
+                            <p class="text-center ratings pb-1 fs-22 text-secondary-2">
                                 <i class="fa-solid fa-star"></i>
                                 <i class="fa-solid fa-star"></i>
                                 <i class="fa-solid fa-star"></i>
@@ -47,7 +46,7 @@
                             </p>
                         </div>
                         <a class="text-decoration-underline text-white" title="LFTGU Lawn care Reviews" target="_blank"
-                            href="https://www.google.com/search?q=R%26S+Flores+Lawn+Care+LLC.&oq=R%26S+Flores+Lawn+Care+LLC.&gs_lcrp=EgZjaHJvbWUyBggAEEUYOTIHCAEQIRigATIHCAIQIRigATIHCAMQIRiSAzIHCAQQIRiSAzIHCAUQIRiSAzIHCAYQIRiSAzIHCAcQIRiSAzIHCAgQIRiSA9IBBzM1OGowajSoAgCwAgA&sourceid=chrome&ie=UTF-8#lrd=0x16b1cfbca210293:0x2bbe154cb02a59d3,1,,,,">
+                            href="">
                             (12 Rating &
                             Reviews)</a>
                     </div>
@@ -57,7 +56,7 @@
                             href="https://www.facebook.com/landscapingfromthegroundupLLC/photos_by">
                             <i class="fa-brands fa-facebook fs-26 text-white"></i>
                         </a>
-                          <a title="LFTGU Lawn care Lawn Care Gmail" href="mailto:rsflores86@gmail.com">
+                        <a title="LFTGU Lawn care Lawn Care Gmail" href="mailto:ftgu.landscape.lakeland@gmail.com">
                             <i class="fa-solid fa-envelope fs-26 text-white mx-2"></i>
                         </a>
                     </div>
@@ -73,7 +72,7 @@
                             <i class="fa-solid fa-location-dot fs-24 pt-1"></i>
                             <span>
                                 Lakeland, FL <br>
-                                Lakeland, FL 30168 <br>
+
                                 <a title="LFTGU Lawn care Location" class="text-decoration-underline fw-400 fs-18"
                                     target="_blank"
                                     href="https://www.google.com/maps/place/5740+South+Gordon+Rd+SW,+Austell,+GA+30168,+USA/@33.8145237,-84.6052862,17z/data=!3m1!4b1!4m6!3m5!1s0x88f5187e4579caa5:0xe23bdb12c47ec1e!8m2!3d33.8145237!4d-84.6027113!16s%2Fg%2F11c25fkh7k?entry=ttu">Get
@@ -101,8 +100,8 @@
             <div class="container">
                 <!-- Logo Section (visible on extra large screens) -->
                 <div class="logo-section d-xl-none d-inline">
-                    <a title="LFTGU Lawn care Homepage Navigation" href="/index.html"><img class="logo" src="/img/logo.png"
-                            alt="LFTGU Lawn care"></a>
+                    <a title="LFTGU Lawn care Homepage Navigation" href="/index.html"><img class="logo"
+                            src="/img/logo.png" alt="LFTGU Lawn care"></a>
                 </div>
                 <!-- Navbar Toggler for mobile -->
                 <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
@@ -141,23 +140,23 @@
 
                             <!-- Third Navigation -->
                             <li class="nav-item">
-                                <a class="nav-link" title="Junk Removal"
-                                    href="/junk-removal-services-near-austell-ga.html">
-                                    Junk Removal
+                                <a class="nav-link" title="Mulching"
+                                    href="/lawn-mulching.html">
+                                   Mulching
                                 </a>
                             </li>
 
                             <!-- Fourth Navigation -->
                             <li class="nav-item">
-                                <a class="nav-link" title="Commercial Services"
-                                    href="/commercial-lawn-services-near-austell-ga.html">Commercial Services</a>
+                                <a class="nav-link" title="Mowing"
+                                    href="/lawn-moing.html">Lawn Mowing</a>
                             </li>
 
                             <!-- Fifth Navigation -->
                             <li class="nav-item">
-                                <a class="nav-link" title="Residential Services"
-                                    href="/residential-lawn-services-near-austell-ga.html">
-                                    Residential Services
+                                <a class="nav-link" title="Trimming"
+                                    href="/lawn-trimming.html">
+                                    Trimming
                                 </a>
                             </li>
 
