--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1 maximum-scale=1.0, user-scalable=no">
     <title>
-        Trusted Lawn Care and Junk Removal Services in Lakeland, FL
+        Trusted Lawn Care  Services in Lakeland, FL
     </title>
 
     <meta name="description" content="">
@@ -140,23 +140,23 @@
 
                             <!-- Third Navigation -->
                             <li class="nav-item">
-                                <a class="nav-link" title="Junk Removal"
-                                    href="/junk-removal-services-near-austell-ga.html">
-                                    Junk Removal
+                                <a class="nav-link" title="Mulching"
+                                    href="/lawn-mulching.html">
+                                   Mulching
                                 </a>
                             </li>
 
                             <!-- Fourth Navigation -->
                             <li class="nav-item">
-                                <a class="nav-link" title="Commercial Services"
-                                    href="/commercial-lawn-services-near-austell-ga.html">Commercial Services</a>
+                                <a class="nav-link" title="Mowing"
+                                    href="/lawn-moing.html">Lawn Mowing</a>
                             </li>
 
                             <!-- Fifth Navigation -->
                             <li class="nav-item">
-                                <a class="nav-link" title="Residential Services"
-                                    href="/residential-lawn-services-near-austell-ga.html">
-                                    Residential Services
+                                <a class="nav-link" title="Trimming"
+                                    href="/lawn-trimming.html">
+                                    Trimming
                                 </a>
                             </li>
 
