--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1 maximum-scale=1.0, user-scalable=no">
     <title>
-        Trusted Lawn Care  Services in Lakeland, FL
+        Trusted Lawn Care Services in Lakeland, FL
     </title>
 
     <meta name="description" content="">
@@ -140,22 +140,19 @@
 
                             <!-- Third Navigation -->
                             <li class="nav-item">
-                                <a class="nav-link" title="Mulching"
-                                    href="/lawn-mulching.html">
-                                   Mulching
+                                <a class="nav-link" title="Mulching" href="/lawn-mulching.html">
+                                    Mulching
                                 </a>
                             </li>
 
                             <!-- Fourth Navigation -->
                             <li class="nav-item">
-                                <a class="nav-link" title="Mowing"
-                                    href="/lawn-moing.html">Lawn Mowing</a>
+                                <a class="nav-link" title="Mowing" href="/lawn-moing.html">Lawn Mowing</a>
                             </li>
 
                             <!-- Fifth Navigation -->
                             <li class="nav-item">
-                                <a class="nav-link" title="Trimming"
-                                    href="/lawn-trimming.html">
+                                <a class="nav-link" title="Trimming" href="/lawn-trimming.html">
                                     Trimming
                                 </a>
                             </li>
@@ -192,14 +189,15 @@
                 </div>
 
                 <h1 class="text-center">
-                    Trusted <span class="text-primary">Lawn Care</span>
+                    Professional <span class="text-primary">Lawn Care</span>
                     Services in Lakeland, FL
                 </h1>
 
                 <!-- Hero Information -->
                 <p class="hero-info">
-                    We offer a wide range of services like lawn mowing, mulching, small tree trimming and pine straw
-                    installation.
+                    We offer a wide range of services like lawn mowing, mulching, small tree trimming, <br> prep bed
+                    areas,
+                    sidewalks, edge & blow hard surface, Trimming and shaping.
                 </p>
 
                 <!-- Call to Action Buttons -->
@@ -284,10 +282,12 @@
                         <br><br>
                         At Lakeland, FL, we know that a great lawn is essential for a happy home. That's why
                         we offer a range of services, like lawn mowing, tree trimming, mulching, edge & blow hard
-                        surface, sidewalks, prep bed areas , trimming & shaping . Our team works hard to keep your lawn healthy and looking its
+                        surface, sidewalks, prep bed areas , trimming & shaping . Our team works hard to keep your lawn
+                        healthy and looking its
                         best, so you can relax and enjoy your outdoor space. Trust us for great service and results
-                        you'll love. Give us a call at <br> <br><a href="tel:+14049748399" class="text-decoration-underline"
-                            title="LFTGU Lawn care Contact Info">+1 813-809-3317</a> to see how we can help your lawn
+                        you'll love. Give us a call at <br> <br><a href="tel:+14049748399"
+                            class="text-decoration-underline" title="LFTGU Lawn care Contact Info">+1 813-809-3317</a>
+                        to see how we can help your lawn
                         thrive!
                     </p>
                     <a title="Call LFTGU Lawn care Now" class="btn btn-primary rounded-1 px-5 fs-20 fw-600"
