--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
                                 <a title="LFTGU Lawn care Location" class="text-decoration-underline fw-400 fs-18"
                                     target="_blank"
-                                    href="https://www.google.com/maps/place/5740+South+Gordon+Rd+SW,+Austell,+GA+30168,+USA/@33.8145237,-84.6052862,17z/data=!3m1!4b1!4m6!3m5!1s0x88f5187e4579caa5:0xe23bdb12c47ec1e!8m2!3d33.8145237!4d-84.6027113!16s%2Fg%2F11c25fkh7k?entry=ttu">Get
+                                    href="">Get
                                     Directions
                             </span>
                             </a>
@@ -827,7 +827,7 @@
                             <br>
                             <a class="text-decoration-underline text-secondary" title="LFTGU Lawn care Directions"
                                 target="_blank"
-                                href="https://www.google.com/maps/place/5740+South+Gordon+Rd+SW,+Austell,+GA+30168,+USA/@33.8145237,-84.6052862,17z/data=!3m1!4b1!4m6!3m5!1s0x88f5187e4579caa5:0xe23bdb12c47ec1e!8m2!3d33.8145237!4d-84.6027113!16s%2Fg%2F11c25fkh7k?entry=ttu">
+                                href="">
                                 Get Directions
                             </a>
                         </p>
