--- a/contact-us.html
+++ b/contact-us.html
@@ -149,7 +149,7 @@
                             <!-- Fourth Navigation -->
                             <li class="nav-item">
                                 <a class="nav-link" title="Mowing"
-                                    href="/lawn-moing.html">Lawn Mowing</a>
+                                    href="/lawn-mowing.html">Lawn Mowing</a>
                             </li>
 
                             <!-- Fifth Navigation -->
