--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                             <!-- Second Navigation -->
                             <li class="nav-item">
                                 <a class="nav-link" title="Lawn Services"
-                                    href="/lawn-services-near-austell-ga.html">Lawn Services</a>
+                                    href="/">Lawn Services</a>
                             </li>
 
                             <!-- Third Navigation -->
@@ -147,7 +147,7 @@
 
                             <!-- Fourth Navigation -->
                             <li class="nav-item">
-                                <a class="nav-link" title="Mowing" href="/lawn-moing.html">Lawn Mowing</a>
+                                <a class="nav-link" title="Mowing" href="/lawn-mowing.html">Mowing</a>
                             </li>
 
                             <!-- Fifth Navigation -->
@@ -320,7 +320,7 @@
                             <img src="/img/service-1-icon.png" alt="Lawn Mowing">
                         </div>
                         <img class="bg-icon" src="/img/service-1-icon.png" alt="Lawn Mowing">
-                        <a href="/austell-lawn-mowing.html" title="Lawn Mowing" class="service-name">
+                        <a href="/lawn-mowing.html" title="Lawn Mowing" class="service-name">
                             Lawn Mowing <i class="fa-solid fa-chevron-right ms-1 fs-18"></i>
                         </a>
                     </div>
@@ -339,8 +339,8 @@
                             <img src="/img/service-3-icon.png" alt="Tree Trimming">
                         </div>
                         <img class="bg-icon" src="/img/service-3-icon.png" alt="Tree Trimming">
-                        <a href="/austell-tree-trimming.html" title="Tree Trimming" class="service-name">
-                            Tree Trimming <i class="fa-solid fa-chevron-right ms-1 fs-18"></i>
+                        <a href="/lawn-trimming.html" title="Tree Trimming" class="service-name">
+                             Trimming <i class="fa-solid fa-chevron-right ms-1 fs-18"></i>
                         </a>
                     </div>
                     <div class="img-div">
@@ -358,7 +358,7 @@
                             <img src="/img/service-2-icon.png" alt="Mulching">
                         </div>
                         <img class="bg-icon" src="/img/service-2-icon.png" alt="Mulching">
-                        <a href="/austell-mulching.html" title="Mulching Services" class="service-name">
+                        <a href="/lawn-mulching.html" title="Mulching Services" class="service-name">
                             Mulching <i class="fa-solid fa-chevron-right ms-1 fs-18"></i>
                         </a>
                     </div>
@@ -378,7 +378,7 @@
                             <img src="/img/service-4-icon.png" alt="Edge & Blow Hard Surface">
                         </div>
                         <img class="bg-icon" src="/img/service-4-icon.png" alt="Edge & Blow Hard Surface">
-                        <a href="/austell-pine-straw-installation.html" title="Edge & Blow Hard Surface"
+                        <a href="/edge-blow-hard-surfaces.html" title="Edge & Blow Hard Surface"
                             class="service-name">
                             Edge & Blow Hard Surface <i class="fa-solid fa-chevron-right ms-1 fs-18"></i>
                         </a>
@@ -398,7 +398,7 @@
                             <img src="/img/service-5-icon.png" alt="Side walks">
                         </div>
                         <img class="bg-icon" src="/img/service-5-icon.png" alt="Side walks">
-                        <a href="/junk-removal-services-near-austell-ga.html" title="Side walks" class="service-name">
+                        <a href="/sidewalks.html" title="Side walks" class="service-name">
                             Side walks <i class="fa-solid fa-chevron-right ms-1 fs-18"></i>
                         </a>
                     </div>
@@ -416,7 +416,7 @@
                             <img src="/img/service-3-icon.png" alt="Prep bed areas">
                         </div>
                         <img class="bg-icon" src="/img/service-3-icon.png" alt="Prep bed areas">
-                        <a href="/austell-Prep bed areas-services.html" title="Prep bed areas" class="service-name">
+                        <a href="/prep-bed-areas.html" title="Prep bed areas" class="service-name">
                             Prep bed areas <i class="fa-solid fa-chevron-right ms-1 fs-18"></i>
                         </a>
                     </div>
