--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
 
                 <!-- Img Side -->
                 <div class="img-div top-right">
-                    <img style="object-position: top;" src="/img/about-us-1.jpg" alt="Our Lawn Services">
+                    <img style="object-position: top;" src="/img/new-lawn.jpg" alt="Our Lawn Services">
 
                     <!-- <div class="img-data data-bottom-left">
                         <p class=" highlight">Keith Dorr</p>
